Remove School directory

--- a/templates/index_new.html
+++ b/templates/index_new.html
@@ -30,6 +30,7 @@
     .container-glav img{
         width: 480px;
         height: 341px;
+        object-fit: cover;
     }
     .card {
         display: flex;
