--- a/templates/workspace/index.html
+++ b/templates/workspace/index.html
@@ -30,6 +30,7 @@
     .container-glav img{
         width: 480px;
         height: 341px;
+        object-fit: cover;
     }
     .card {
         display: flex;
@@ -111,10 +112,10 @@
 }
 
 .page-link {
-    color: #4C1D95; /* Цвет ссылок */
+    color: #4C1D95;
     text-decoration: none;
     padding: 8px 12px;
-    border: 1px solid #ddd; /* Граница вокруг ссылок */
+    border: 1px solid #ddd;
     border-radius: 4px;
 }
 
@@ -123,9 +124,9 @@
 }
 
 .page-item .page-link {
-    color: #000; /* Цвет активной страницы */
-    background-color: #f0f0f0; /* Фон активной страницы */
-    border: 1px solid #4C1D95; /* Цвет границы активной страницы */
+    color: #000;
+    background-color: #f0f0f0;
+    border: 1px solid #4C1D95;
 }
 
 .page-link i {
